# twincam

./: .gitignore  README.md  all.sh  build.sh  camera_session.cpp  camera_session.h  drm.cpp  drm.h  event_loop.cpp  image.cpp  install-first-frame.sh  install-minimal.sh  install.sh  kms_sink.cpp  kms_sink.h  main.cpp  main.h  meson.build  options.cpp  options.h  sonar-project.properties  stream_options.cpp  stream_options.h  tags  test.sh  twincam.cpp  twincam.h  twincam.spec
.github/workflows/: buildtwincam.yaml  cppcheck.yml  testgate.yml
.scannerwork/: report-task.txt
build_wrapper_output_directory/: build-wrapper-dump.json
lib/dracut/modules.d/81twincam/: module-setup-first-frame.sh  module-setup-minimal.sh  module-setup.sh
lib/systemd/system/: twincam-first-frame.service  twincam-quit.service  twincam.service
src/: asnprintfcat.cpp  asnprintfcat.h  camera_session.cpp  camera_session.h  drm.cpp  drm.h  event_loop.cpp  event_loop.h  file.cpp  file.h  file_sink.cpp  file_sink.h  first_frame.c  frame_sink.cpp  frame_sink.h  image.cpp  image.h  jpeg_error_manager.cpp  jpeg_error_manager.h  kms_sink.cpp  kms_sink.h  sdl_sink.cpp  sdl_sink.h  sdl_texture.cpp  sdl_texture.h  sdl_texture_mjpg.cpp  sdl_texture_mjpg.h  sdl_texture_nv12.cpp  sdl_texture_nv12.h  sdl_texture_yuv.cpp  sdl_texture_yuyv.cpp  sdl_texture_yuyv.h  string_printf.cpp  string_printf.h  twincam.cpp  twincam.h  twncm_fnctl.cpp  twncm_fnctl.h  twncm_stdio.h  twncm_stdlib.h  (+2 more)
tests/: build_twincam.sh  cpp_check.sh  create-src.rpm.sh  prepare_env.sh  run-all.sh  sonar.sh
